DOCS-3388: Fix card backgrounds

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -824,7 +824,7 @@ details.howtoexpand > div.expand-content *:nth-child(2) {
   border-bottom: unset;
 }
 
-.howtoexpand .hover-card {
+.howtoexpand .hover-card a {
   background-color: #fff;
 }
 
