--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,8 +31,7 @@ hugo.IsProduction (ne $outputFormat "print") -}}
 <script>document.documentElement.classList.remove("no-js")</script>
 <link rel="canonical" href="{{ .Permalink }}" />
 <meta name="description" content="{{- template "partials/page-description.html" .
--}}"> {{ template "_internal/opengraph.html" . -}} {{ template
-"_internal/schema.html" . -}} {{ template "_internal/twitter_cards.html" . -}}
+-}}"> {{ template "_internal/opengraph.html" . -}} {{ template "_internal/twitter_cards.html" . -}}
 {{ partialCached "head-css.html" . "asdf" -}}
 
 {{- if and (not .Params.toc_hide) (hugo.IsProduction) -}}
